--- a/semana-15/aula2/package.json
+++ b/semana-15/aula2/package.json
@@ -9,6 +9,7 @@
     "ex5": "tsc && node ./build/exercicio5.js",
     "ex6": "tsc && node ./build/exercicio6.js",
     "ex7": "tsc && node ./build/exercicio7.js",
+    "ex8": "tsc && node ./build/exercicio8.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
