--- a/semana-15/aula2/package.json
+++ b/semana-15/aula2/package.json
@@ -10,6 +10,8 @@
     "ex6": "tsc && node ./build/exercicio6.js",
     "ex7": "tsc && node ./build/exercicio7.js",
     "ex8": "tsc && node ./build/exercicio8.js",
+    "ex9": "tsc && node ./build/exercicio9.js",
+    "ex10": "tsc && node ./build/exercicio10.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
